# chunkey-bert

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  lint.sh  pyproject.toml
.github/workflows/: linting_and_tests.yml
src/chunkey_bert/: model.py
src/experiments/: compare_with_keybert_example.ipynb
tests/long_keybert_tests/: test_model.py
