[tool.poetry]
authors = ["Yaniv Shulman <yaniv@shulman.info>"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
description = "Modification of the KeyBERT method to extract keywords and keyphrases using chunks. This provides better results, especialy when handling long documents."
homepage = "https://github.com/yaniv-shulman/chunkey-keybert"
keywords = [
    "machine learning",
]
name = "chunkey-bert"
packages = [
    { include = "chunkey_bert", from = "src" }
]
readme = "README.md"
repository = "https://github.com/yaniv-shulman/chunkey-bert"
version = "0.1.0"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
keybert = "^0.8.4"


[tool.poetry.group.experiments.dependencies]
notebook = "^7.1.3"
ipywidgets = "^8.1.2"
spacy = "^3.7.4"
cupy-cuda12x = "^13.1.0"
keyphrase-vectorizers = "^0.0.13"
sentence-transformers = "^2.7.0"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3.tar.gz"}
datasets = "^2.19.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}
mypy = "^1.10.0"
flake8 = "^7.0.0"
ruff = "^0.4.3"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
coverage = {extras = ["toml"], version = "^7.5.1"}
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py39"]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "paper",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4
target-version = "py39"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
testpaths = ["tests"]


[tool.coverage.run]
branch = true
omit = ["tests/*", "src/experiments/*"]


[tool.coverage.report]
show_missing=true
